# templates

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  template_tests.cpp
